new changes to resume

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <h3 id="programming-languages">Programming Languages:</h3>
 <ul>
-  <li>PHP, .NET, C++, C, F#, Java, Ruby, Python, Perl</li>
+  <li>PHP, .NET, C++, C, F#, Java, Ruby, Python, Perl, Actionscript, Javascript</li>
 </ul>
 
 <h3 id="markup-languages">Markup Languages:</h3>
